# ibooks2notion

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
core/: ibooks.py  ibooksql.py  models.py
