[tool.poetry]
name = "ibooks2notion"
version = "0.1.0"
description = "iBooks highlights to Notion importer."
authors = ["Renata Hlavova <72945309+renehlavova@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pylint = "^2.15.3"
mypy = "^0.971"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
